--- a/app/views/items/_amazon_items.html.erb
+++ b/app/views/items/_amazon_items.html.erb
@@ -5,13 +5,17 @@
         <div class="image">
           <div class="img-wrap">
             <% #TODO 商品画像 %>
+            <% if item.get('LargeImage/URL') %>
+            <img src="<%= item.get('LargeImage/URL') %>" />
+            <% else %>
             <%= image_tag("no-image.png" , alt: item.get('ItemAttributes/Title')) %>
+            <% end %>
           </div>
         </div>
         <div class="detail">
           <p class="title">
             <% #TODO 商品タイトル %>
-            仮タイトル
+            <%= item.get('ItemAttributes/Title') %>
           </p>
         </div>
         <div class="action clearfix">
