--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,12 +4,18 @@
       <div class="image">
         <div class="img-wrap">
           <% #TODO 商品イメージ %>
-          <%= image_tag("no-image.png" , alt: @item.title) %>
+          <% if #@item.get('LargeImage/URL') %>
+            <img src="<%= #@item.get('LargeImage/URL') %>" />
+            <% else %>
+            <%= #image_tag("no-image.png" , alt: item.get('ItemAttributes/Title')) %>
+            <% end %>
         </div>
       </div>
       <div class="title">
         <% #TODO 商品タイトル %>
-        仮タイトル
+        <p class="title">
+            <%= #@item.get('ItemAttributes/Title') %>
+          </p>
       </div>
       <%= render 'action' , item: @item %>
     </div>
