--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <title>other title</title>
+<% end %>
+  
 <div class="cover">
   <div class="cover-inner">
     <div class="cover-contents">
