--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <title><%= @title %></title>
+  <meta name=”description” content="@に関する情報です。この商品を欲しい人、持ってる人を表示しています。">
+<% end %>
+
 <div class="container">
   <div class="container-inner inner-sm clearfix">
     <div class="item-single-main">
@@ -23,9 +28,7 @@
         <div class="side-box-body">
           <% # TODO Haveしたユーザー一覧 %>
           <% @haveusers.each do |u| %>
-            <span class="gravatar"><%= link_to image_tag(gravatar_for u), './users/#{u.id}' %>
-              <%= gravatar_for u %>
-            </span>
+            <%= link_to gravatar_for(u), user_path(u) %>
           <% end %>
         </div>
       </div>
@@ -34,11 +37,7 @@
         <div class="side-box-body">
           <% # TODO Wantしたユーザー一覧 %>
           <% @wantusers.each do |u| %>
-          <li class="clearfix">
-            <div><%= gravatar_for u %><%= u.name %></div>
-            <br>
-          </li>
-  
+            <%= link_to gravatar_for(u), user_path(u) %>
           <% end %>
         </div>
       </div>
