--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
   <title><%= @title %>さんのプロフィール</title>
-  <meta name=”description” content="@のモノページ。Hanakoの欲しいモノ、持ってるモノを表示しています。">
+  <meta name="description" content="<%= @title %>のモノページ。Hanakoの欲しいモノ、持ってるモノを表示しています。">
 <% end %>
 
 
