--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,16 @@
                   アイテムを追加
                 <% end %>
               </li>
+              <li>
+                <%= link_to ranking_path do %>
+                  Haveランキング
+                <% end %>
+              </li>
+              <li>
+                <%= link_to ranking_path do %>
+                  Wantランキング
+                <% end %>
+              </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <span class="gravatar">
