--- a/app/views/items/_amazon_items.html.erb
+++ b/app/views/items/_amazon_items.html.erb
@@ -5,7 +5,7 @@
         <div class="image">
           <div class="img-wrap">
             <% if item.get('LargeImage/URL') %>
-            <img src="<%= item.get('LargeImage/URL') %>" />
+            <img src="<%= item.get('LargeImage/URL') %>" alt="<%= item.get('ItemAttributes/Title') %>" />
             <% else %>
             <%= image_tag("no-image.png" , alt: item.get('ItemAttributes/Title')) %>
             <% end %>
