--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,9 +9,9 @@
       <div class="image">
         <div class="img-wrap">
           <% if @item.large_image %>
-            <img src="<%= @item.large_image %>" />
+            <img src="<%= @item.large_image %>" alt="<%= @item.title %>" />
             <% else %>
-            <%= image_tag("no-image.png") %>
+            <%= image_tag("no-image.png", alt: item.get('ItemAttributes/Title')) %>
             <% end %>
         </div>
       </div>
