--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,14 +27,10 @@
                 <% end %>
               </li>
               <li>
-                <%= link_to ranking_path do %>
-                  Haveランキング
-                <% end %>
+                <%= link_to 'have', '/ranking/have'%>
               </li>
               <li>
-                <%= link_to ranking_path do %>
-                  Wantランキング
-                <% end %>
+                <%= link_to 'want', '/ranking/want' %>
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
