--- a/app/views/ranking/have.html.erb
+++ b/app/views/ranking/have.html.erb
@@ -2,3 +2,27 @@
   <title>Haveランキング</title>
   <meta name="description" content="Haveランキング">
 <% end %>
+
+<div class="container">
+  <div class="container-inner inner-default clearfix">
+    <% @items.each_with_index do |item, index| %>
+      <div class="item-box">
+        <div class="image">
+          <div class="img-wrap">
+            <% if item.large_image %>
+            <img src="<%= item.large_image %>" alt="<%= item.title %>" />
+            <% else %>
+            <%= image_tag("no-image.png" , alt: item.title) %>
+            <% end %>
+          </div>
+        </div>
+        <div class="detail">
+          <p class="title">
+            【<%= index + 1 %>位】
+             <%= link_to item.title , item.detail_page_url %>
+          </p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
