--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,10 +27,10 @@
                 <% end %>
               </li>
               <li>
-                <%= link_to 'have', '/ranking/have'%>
+                <%= link_to 'haveランキング', '/ranking/have'%>
               </li>
               <li>
-                <%= link_to 'want', '/ranking/want' %>
+                <%= link_to 'wantランキング', '/ranking/want' %>
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
